# coisito

./: .gitignore  Button.cpp  Button.hpp  Coisito.cpp  Coisito.hpp  Container.cpp  Container.hpp  Desnome.cpp  Desnome.hpp  Menu.cpp  Menu.hpp  README.md  State.cpp  State.hpp  StateManager.cpp  StateManager.hpp  Thing.cpp  Thing.hpp  VisibleContainer.cpp  VisibleContainer.hpp  VisibleState.cpp  VisibleState.hpp  VisibleThing.cpp  VisibleThing.hpp  main.cpp  meson.build  vec2.hpp  vec2.ipp
Managers/: EventManager.cpp  EventManager.hpp  GraphicsManager.cpp  GraphicsManager.hpp
Sorters/: BubbleSorter.cpp  BubbleSorter.hpp  SelectionSorter.cpp  SelectionSorter.hpp  Sorter.cpp  Sorter.hpp
uml/: coisito.mdj
